--- a/bio1m.bib
+++ b/bio1m.bib
@@ -1763,3 +1763,406 @@ urldate = {2014-11-09},
 	month = may,
 	year = {2002}
 }
+
+
+@article{bloch_grasping_2002,
+	title = {Grasping {Primate} {Origins}},
+	volume = {298},
+	issn = {0036-8075, 1095-9203},
+	url = {http://science.sciencemag.org/content/298/5598/1606},
+	doi = {10.1126/science.1078249},
+	abstract = {The evolutionary history that led to Eocene-and-later primates of modern aspect (Euprimates) has been uncertain. We describe a skeleton of Paleocene plesiadapiformCarpolestes simpsoni that includes most of the skull and many postcranial bones. Phylogenetic analyses indicate that Carpolestidae are closely related to Euprimates. C. simpsonihad long fingers and an opposable hallux with a nail. It lacked orbital convergence and an ankle specialized for leaping. We infer that the ancestor of Euprimates was primitively an arboreal grasper adapted for terminal branch feeding rather than a specialized leaper or visually directed predator.},
+	language = {en},
+	number = {5598},
+	urldate = {2018-02-02},
+	journal = {Science},
+	author = {Bloch, Jonathan I. and Boyer, Doug M.},
+	month = nov,
+	year = {2002},
+	pmid = {12446906},
+	pages = {1606--1610}
+}
+
+
+@article{nengo_new_2017,
+	title = {New infant cranium from the {African} {Miocene} sheds light on ape evolution},
+	volume = {548},
+	copyright = {2017 Nature Publishing Group},
+	issn = {1476-4687},
+	url = {https://www.nature.com/articles/nature23456},
+	doi = {10.1038/nature23456},
+	abstract = {{\textless}p{\textgreater}The Earth in the Miocene epoch (235.3 million years ago) was a planet of the apes, with more than 40 species in at least 30 genera. Very few, however, are known from complete cranial evidence. Only a handful of species are known from any part of the skull beyond the face and palate, limiting the information about the state of the skull in the immediate relatives of hominins and modern apes. The dearth is particularly acute in Africa, where no cranial remains are known from between 14 and 10 million years ago. Isaiah Nengo and colleagues describe the skull of an infant ape recovered from Kenya. The 13-million-year-old specimen is assigned to a new species in the genus \textit{Nyanzapithecus}. The evidence shows that, although the creature shares some similarities with gibbons, these resemblances are very likely convergent and the new species is a close relative of the common ancestor of extant apes.{\textless}/p{\textgreater}},
+	language = {En},
+	number = {7666},
+	urldate = {2018-02-02},
+	journal = {Nature},
+	author = {Nengo, Isaiah and Tafforeau, Paul and Gilbert, Christopher C. and Fleagle, John G. and Miller, Ellen R. and Feibel, Craig and Fox, David L. and Feinberg, Josh and Pugh, Kelsey D. and Berruyer, Camille and Mana, Sara and Engle, Zachary and Spoor, Fred},
+	month = aug,
+	year = {2017},
+	pages = {169}
+}
+
+
+@article{mann_tool_2013,
+	title = {Tool use by aquatic animals},
+	volume = {368},
+	copyright = {© 2013 The Author(s) Published by the Royal Society. All rights reserved.},
+	issn = {0962-8436, 1471-2970},
+	url = {http://rstb.royalsocietypublishing.org/content/368/1630/20120424},
+	doi = {10.1098/rstb.2012.0424},
+	abstract = {Tool-use research has focused primarily on land-based animals, with less consideration given to aquatic animals and the environmental challenges and conditions they face. Here, we review aquatic tool use and examine the contributing ecological, physiological, cognitive and social factors. Tool use among aquatic animals is rare but taxonomically diverse, occurring in fish, cephalopods, mammals, crabs, urchins and possibly gastropods. While additional research is required, the scarcity of tool use can likely be attributable to the characteristics of aquatic habitats, which are generally not conducive to tool use. Nonetheless, studying tool use by aquatic animals provides insights into the conditions that promote and inhibit tool-use behaviour across biomes. Like land-based tool users, aquatic animals tend to find tools on the substrate and use tools during foraging. However, unlike on land, tool users in water often use other animals (and their products) and water itself as a tool. Among sea otters and dolphins, the two aquatic tool users studied in greatest detail, some individuals specialize in tool use, which is vertically socially transmitted possibly because of their long dependency periods. In all, the contrasts between aquatic- and land-based tool users enlighten our understanding of the adaptive value of tool-use behaviour.},
+	language = {en},
+	number = {1630},
+	urldate = {2018-02-06},
+	journal = {Phil. Trans. R. Soc. B},
+	author = {Mann, Janet and Patterson, Eric M.},
+	month = nov,
+	year = {2013},
+	pmid = {24101631},
+	pages = {20120424}
+}
+
+
+@article{faurie_handedness_2005,
+	title = {Handedness, {Homicide} and {Negative} {Frequency}-{Dependent} {Selection}},
+	volume = {272},
+	copyright = {Copyright © 2005 The Royal Society},
+	issn = {0962-8452},
+	url = {http://www.jstor.org/stable/30047502},
+	abstract = {Humans exhibit hand preference for most manual activities in which they are specialized. Right- and left-handers have coexisted at least since the Upper Palaeolithic, and left-handers are in the minority in all human populations. The persistence of the polymorphism of handedness is a puzzle because this trait is substantially heritable and several fitness costs are associated with left-handedness. Some countervailing benefit is required to maintain the polymorphism. Left-handers may have a frequency-dependent advantage in fights-the advantage being greater when their frequency is lower. Sports data from Western societies are consistent with this prediction. Here, we show that the frequency of left-handers is strongly and positively correlated with the rate of homicides across traditional societies. It ranges from 3\% in the most pacifistic societies, to 27\% in the most violent and warlike. This finding is consistent with a frequency-dependent selection mechanism maintaining left-handedness in these societies.},
+	number = {1558},
+	urldate = {2014-11-01},
+	journal = {Proceedings: Biological Sciences},
+	author = {Faurie, Charlotte and Raymond, Michel},
+	month = jan,
+	year = {2005},
+	pages = {25--28}
+}
+
+
+@article{deecke_tool-use_2012,
+	title = {Tool-use in the brown bear ({Ursus} arctos)},
+	volume = {15},
+	issn = {1435-9448, 1435-9456},
+	url = {https://link.springer.com/article/10.1007/s10071-012-0475-0},
+	doi = {10.1007/s10071-012-0475-0},
+	abstract = {This is the first report of tool-using behaviour in a wild brown bear (Ursus arctos). Whereas the use of tools is comparatively common among primates and has also been documented in several species of birds, fishes and invertebrates, tool-using behaviours have so far been observed in only four species of non-primate mammal. The observation was made and photographed while studying the behaviour of a subadult brown bear in south-eastern Alaska. The animal repeatedly picked up barnacle-encrusted rocks in shallow water, manipulated and re-oriented them in its forepaws, and used them to rub its neck and muzzle. The behaviour probably served to relieve irritated skin or to remove food-remains from the fur. Bears habitually rub against stationary objects and overturn rocks and boulders during foraging and such rubbing behaviour could have been transferred to a freely movable object to classify as tool-use. The bear exhibited considerable motor skills when manipulating the rocks, which clearly shows that these animals possess the advanced motor learning necessary for tool-use. Advanced spatial cognition and motor skills for object manipulation during feeding and tool-use provide a possible explanation for why bears have the largest brains relative to body size of all carnivores. Systematic research into the cognitive abilities of bears, both in captivity and in the wild, is clearly warranted to fully understand their motor-learning skills and physical intelligence related to tool-use and other object manipulation tasks.},
+	language = {en},
+	number = {4},
+	urldate = {2018-02-06},
+	journal = {Animal Cognition},
+	author = {Deecke, Volker B.},
+	month = jul,
+	year = {2012},
+	pages = {725--730}
+}
+
+@article{krawczak_role_2003,
+	title = {A role for overdominant selection in phenylketonuria? Evidence from molecular data},
+	volume = {21},
+	copyright = {Copyright © 2003 Wiley-Liss, Inc.},
+	issn = {1098-1004},
+	shorttitle = {A role for overdominant selection in phenylketonuria?},
+	doi = {10.1002/humu.10205},
+	abstract = {To date, the reason is unknown for the high prevalence of phenylalanine hydroxylase ({PAH}) mutations causing phenylketonuria ({PKU}) in extant European populations. However, molecular genetic data generated over the last decade suggest that the concomitant excess of (unaffected) {PKU} carriers is at least in part the result of overdominant selection (“heterozygous advantage”). Such selection would have acted upon several different mutations in different historical populations. The exact nature of the underlying selective mechanism is unknown; its elucidation requires further investigation. Hum Mutat 21:394–397, 2003. © 2003 Wiley-Liss, Inc.},
+	language = {en},
+	number = {4},
+	urldate = {2014-10-26},
+	journal = {Human Mutation},
+	author = {Krawczak, Michael and Zschocke, Johannes},
+	month = apr,
+	year = {2003},
+	keywords = {heterozygote advantage, mutation analysis, overdominant selection, {PAH}, phenylalanine hydroxylase, Phenylketonuria, {PKU}, population},
+	pages = {394--397},
+	file = {Krawczak_Zschocke_2003_A role for overdominant selection in phenylketonuria.pdf:/home/bolker/.mozilla/firefox/gf2kp1m5.default/zotero/storage/27CIDNH2/Krawczak_Zschocke_2003_A role for overdominant selection in phenylketonuria.pdf:application/pdf;Snapshot:/home/bolker/.mozilla/firefox/gf2kp1m5.default/zotero/storage/6HI25ZK4/abstract.html:text/html}
+}
+
+@article{spyropoulos_taysachs_1988,
+	title = {Tay-Sachs carriers and tuberculosis resistance},
+	volume = {331},
+	issn = {0028-0836},
+	doi = {10.1038/331666a0},
+	language = {eng},
+	number = {6158},
+	journal = {Nature},
+	author = {Spyropoulos, B.},
+	month = feb,
+	year = {1988},
+	pmid = {3344043},
+	keywords = {Alleles, Heterozygote, Humans, Immunity, Innate, Tay-Sachs Disease, Tuberculosis, Pulmonary},
+	pages = {666}
+}
+
+@article{spyropoulos_heterozygote_1981,
+	title = {Heterozygote advantage in Tay-Sachs carriers?},
+	volume = {33},
+	issn = {0002-9297},
+	url = {http://www.ncbi.nlm.nih.gov/pmc/articles/PMC1685035/},
+	abstract = {Chi-square analyses of new data as well as data previously reported by Myrianthopoulos have shown that grandparents of Tay-Sachs carriers die from proportionally the same causes as grandparents of noncarriers. It is unlikely that there is any advantage to being a Tay-Sachs carrier insofar as resistance to tuberculosis is concerned. Our results are further evidence to support Fraikor's claim that the high carrier frequency of the allele in Ashkenazi Jews is probably caused by a combination of founder effect, genetic drift, and differential immigration patterns.},
+	number = {3},
+	urldate = {2014-10-08},
+	journal = {American Journal of Human Genetics},
+	author = {Spyropoulos, B and Moens, P B and Davidson, J and Lowden, J A},
+	month = may,
+	year = {1981},
+	pmid = {7246543},
+	pmcid = {PMC1685035},
+	pages = {375--380},
+	file = {Spyropoulos et al_1981_Heterozygote advantage in Tay-Sachs carriers.pdf:/home/bolker/.mozilla/firefox/gf2kp1m5.default/zotero/storage/CSXD6G8U/Spyropoulos et al_1981_Heterozygote advantage in Tay-Sachs carriers.pdf:application/pdf}
+}
+
+
+@article{frost_taysachs_2012,
+	title = {Tay-Sachs and French Canadians: A Case of Gene-Culture Co-evolution?},
+	volume = {02},
+	issn = {2163-9353, 2163-9361},
+	shorttitle = {Tay-Sachs and French Canadians},
+	url = {http://www.scirp.org/journal/PaperDownload.aspx?DOI=10.4236/aa.2012.23016},
+	doi = {10.4236/aa.2012.23016},
+	number = {03},
+	urldate = {2014-10-08},
+	journal = {Advances in Anthropology},
+	author = {Frost, Peter},
+	year = {2012},
+	pages = {132--138}
+}
+
+@article{frisch_origin_2004,
+	title = {Origin and spread of the 1278insTATC mutation causing Tay-Sachs disease in Ashkenazi Jews: genetic drift as a robust and parsimonious hypothesis},
+	volume = {114},
+	issn = {0340-6717, 1432-1203},
+	shorttitle = {Origin and spread of the 1278insTATC mutation causing Tay-Sachs disease in Ashkenazi Jews},
+	doi = {10.1007/s00439-003-1072-8},
+	abstract = {The 1278insTATC is the most prevalent β-hexosaminidase A ({HEXA}) gene mutation causing Tay-Sachs disease ({TSD}), one of the four lysosomal storage diseases ({LSDs}) occurring at elevated frequencies among Ashkenazi Jews ({AJs}). To investigate the genetic history of this mutation in the {AJ} population, a conserved haplotype (D15S981:175–D15S131:240–D15S1050:284–D15S197:144–D15S188:418) was identified in 1278insTATC chromosomes from 55 unrelated {AJ} individuals (15 homozygotes and 40 heterozygotes for the {TSD} mutation), suggesting the occurrence of a common founder. When two methods were used for analysis of linkage disequilibrium ({LD}) between flanking polymorphic markers and the disease locus and for the study of the decay of {LD} over time, the estimated age of the insertion was found to be 40±12 generations (95\% confidence interval: 30–50 generations), so that the most recent common ancestor of the mutation-bearing chromosomes would date to the 8th–9th century. This corresponds with the demographic expansion of {AJs} in central Europe, following the founding of the Ashkenaz settlement in the early Middle Ages. The results are consistent with the geographic distribution of the main {TSD} mutation, 1278insTATC being more common in central Europe, and with the coalescent times of mutations causing two other {LSDs}, Gaucher disease and mucolipidosis type {IV}. Evidence for the absence of a determinant positive selection (heterozygote advantage) over the mutation is provided by a comparison between the estimated age of 1278insTATC and the probability of the current {AJ} frequency of the mutant allele as a function of its age, calculated by use of a branching-process model. Therefore, the founder effect in a rapidly expanding population arising from a bottleneck provides a robust parsimonious hypothesis explaining the spread of 1278insTATC-linked {TSD} in {AJ} individuals.},
+	language = {en},
+	number = {4},
+	urldate = {2014-10-08},
+	journal = {Human Genetics},
+	author = {Frisch, Amos and Colombo, Roberto and Michaelovsky, Elena and Karpati, Mazal and Goldman, Boleslaw and Peleg, Leah},
+	month = mar,
+	year = {2004},
+	pages = {366--376},
+}
+
+@article{rich_malarias_1998,
+	title = {Malaria’s Eve: Evidence of a recent population bottleneck throughout the world populations of Plasmodium falciparum},
+	volume = {95},
+	issn = {0027-8424, 1091-6490},
+	shorttitle = {Malaria’s Eve},
+	url = {http://www.pnas.org/content/95/8/4425},
+	abstract = {We have analyzed {DNA} sequences from world-wide geographic strains of Plasmodium falciparum and found a complete absence of synonymous {DNA} polymorphism at 10 gene loci. We hypothesize that all extant world populations of the parasite have recently derived (within several thousand years) from a single ancestral strain. The upper limit of the 95\% confidence interval for the time when this most recent common ancestor lived is between 24,500 and 57,500 years ago (depending on different estimates of the nucleotide substitution rate); the actual time is likely to be much more recent. The recent origin of the P. falciparum populations could have resulted from either a demographic sweep (P. falciparum has only recently spread throughout the world from a small geographically confined population) or a selective sweep (one strain favored by natural selection has recently replaced all others). The selective sweep hypothesis requires that populations of P. falciparum be effectively clonal, despite the obligate sexual stage of the parasite life cycle. A demographic sweep that started several thousand years ago is consistent with worldwide climatic changes ensuing the last glaciation, increased anthropophilia of the mosquito vectors, and the spread of agriculture. P. falciparum may have rapidly spread from its African tropical origins to the tropical and subtropical regions of the world only within the last 6,000 years. The recent origin of the world-wide P. falciparum populations may account for its virulence, as the most malignant of human malarial parasites.},
+	language = {en},
+	number = {8},
+	urldate = {2014-10-18},
+	journal = {PNAS},
+	author = {Rich, Stephen M. and Licht, Monica C. and Hudson, Richard R. and Ayala, Francisco J.},
+	month = apr,
+	year = {1998},
+	pmid = {9539753},
+	keywords = {clonality, demographic sweep, genetic polymorphism, parasitic protozoa, selective sweep},
+	pages = {4425--4430},
+	file = {Rich et al_1998_Malaria’s Eve.pdf:/home/bolker/.mozilla/firefox/gf2kp1m5.default/zotero/storage/HM4ZHKJE/Rich et al_1998_Malaria’s Eve.pdf:application/pdf;Snapshot:/home/bolker/.mozilla/firefox/gf2kp1m5.default/zotero/storage/PJG9TN85/4425.html:text/html}
+}
+
+@article{piel_global_2010,
+	title = {Global distribution of the sickle cell gene and geographical confirmation of the malaria hypothesis},
+	volume = {1},
+	copyright = {© 2010 Nature Publishing Group, a division of Macmillan Publishers Limited. All Rights Reserved.},
+	url = {http://www.nature.com/ncomms/journal/v1/n8/abs/ncomms1104.html},
+	doi = {10.1038/ncomms1104},
+	abstract = {It has been 100 years since the first report of sickle haemoglobin ({HbS}). More than 50 years ago, it was suggested that the gene responsible for this disorder could reach high frequencies because of resistance conferred against malaria by the heterozygous carrier state. This traditional example of balancing selection is known as the 'malaria hypothesis'. However, the geographical relationship between the transmission intensity of malaria and associated {HbS} burden has never been formally investigated on a global scale. Here, we use a comprehensive data assembly of {HbS} allele frequencies to generate the first evidence-based map of the worldwide distribution of the gene in a Bayesian geostatistical framework. We compare this map with the pre-intervention distribution of malaria endemicity, using a novel geostatistical area-mean comparison. We find geographical support for the malaria hypothesis globally; the relationship is relatively strong in Africa but cannot be resolved in the Americas or in Asia.
+View full text},
+	language = {en},
+	urldate = {2014-10-18},
+	journal = {Nature Communications},
+	author = {Piel, Frédéric B. and Patil, Anand P. and Howes, Rosalind E. and Nyangiri, Oscar A. and Gething, Peter W. and Williams, Thomas N. and Weatherall, David J. and Hay, Simon I.},
+	month = nov,
+	year = {2010},
+	keywords = {Biological sciences, Evolution, genetics},
+	pages = {104},
+	file = {Piel et al_2010_Global distribution of the sickle cell gene and geographical confirmation of.pdf:/home/bolker/.mozilla/firefox/gf2kp1m5.default/zotero/storage/BS9VAKNK/Piel et al_2010_Global distribution of the sickle cell gene and geographical confirmation of.pdf:application/pdf;Snapshot:/home/bolker/.mozilla/firefox/gf2kp1m5.default/zotero/storage/4ICX6AFW/ncomms1104.html:text/html}
+}
+
+@article{bunn_triumph_2013,
+	title = {The triumph of good over evil: protection by the sickle gene against malaria},
+	volume = {121},
+	issn = {0006-4971, 1528-0020},
+	shorttitle = {The triumph of good over evil},
+	url = {http://www.bloodjournal.org/cgi/doi/10.1182/blood-2012-08-449397},
+	doi = {10.1182/blood-2012-08-449397},
+	language = {en},
+	number = {1},
+	urldate = {2014-10-18},
+	journal = {Blood},
+	author = {Bunn, H. F.},
+	month = jan,
+	year = {2013},
+	pages = {20--25},
+	file = {20.full.pdf:/home/bolker/.mozilla/firefox/gf2kp1m5.default/zotero/storage/6UXDHA3B/20.full.pdf:application/pdf}
+}
+
+@article{williams_sickle_2005,
+	title = {Sickle Cell Trait and the Risk of Plasmodium falciparum Malaria and Other Childhood Diseases},
+	volume = {192},
+	issn = {0022-1899, 1537-6613},
+	url = {http://jid.oxfordjournals.org/content/192/1/178},
+	doi = {10.1086/430744},
+	abstract = {{BackgroundThe} gene for sickle hemoglobin ({HbS}) is a prime example of natural selection. It is generally believed that its current prevalence in many tropical populations reflects selection for the carrier form (sickle cell trait [{HbAS}]) through a survival advantage against death from malaria. Nevertheless, {\textgreater}50 years after this hypothesis was first proposed, the epidemiological description of the relationships between {HbAS}, malaria, and other common causes of child mortality remains incomplete
+{MethodsWe} studied the incidence of falciparum malaria and other childhood diseases in 2 cohorts of children living on the coast of Kenya
+{ResultsThe} protective effect of {HbAS} was remarkably specific for falciparum malaria, having no significant impact on any other disease. {HbAS} had no effect on the prevalence of symptomless parasitemia but was 50\% protective against mild clinical malaria, 75\% protective against admission to the hospital for malaria, and almost 90\% protective against severe or complicated malaria. The effect of {HbAS} on episodes of clinical malaria was mirrored in its effect on parasite densities during such episodes
+{ConclusionsThe} present data are useful in that they confirm the mechanisms by which {HbAS} confers protection against malaria and shed light on the relationships between {HbAS}, malaria, and other childhood diseases},
+	language = {en},
+	number = {1},
+	urldate = {2014-10-18},
+	journal = {Journal of Infectious Diseases},
+	author = {Williams, Thomas N. and Mwangi, Tabitha W. and Wambua, Sammy and Alexander, Neal D. and Kortok, Moses and Snow, Robert W. and Marsh, Kevin},
+	month = jul,
+	year = {2005},
+	pmid = {15942909},
+	pages = {178--186},
+	file = {Snapshot:/home/bolker/.mozilla/firefox/gf2kp1m5.default/zotero/storage/CNQK8S3Z/178.html:text/html;Williams et al_2005_Sickle Cell Trait and the Risk of Plasmodium falciparum Malaria and Other.pdf:/home/bolker/.mozilla/firefox/gf2kp1m5.default/zotero/storage/3QR2JBSJ/Williams et al_2005_Sickle Cell Trait and the Risk of Plasmodium falciparum Malaria and Other.pdf:application/pdf}
+}
+
+@article{reiter_global_2004,
+	title = {Global warming and malaria: a call for accuracy},
+	volume = {4},
+	issn = {1473-3099},
+	shorttitle = {Global warming and malaria},
+	url = {http://www.ncbi.nlm.nih.gov/pmc/articles/PMC3130128/},
+	doi = {10.1016/S1473-3099(04)01038-2},
+	number = {6},
+	urldate = {2014-10-18},
+	journal = {The Lancet infectious diseases},
+	author = {Reiter, Paul and Thomas, Christopher J and Atkinson, Peter M and Hay, Simon I and Randolph, Sarah E and Rogers, David J and Shanks, G Dennis and Snow, Robert W and Spielman, Andrew},
+	month = jun,
+	year = {2004},
+	pmid = {15172336},
+	pmcid = {PMC3130128},
+	pages = {323--324},
+	file = {Reiter et al_2004_Global warming and malaria.pdf:/home/bolker/.mozilla/firefox/gf2kp1m5.default/zotero/storage/CQ2E4UB2/Reiter et al_2004_Global warming and malaria.pdf:application/pdf}
+}
+
+@incollection{myrianthopoulos_population_1972,
+	series = {Advances in Experimental Medicine and Biology},
+	title = {Population Dynamics of Tay-Sachs Disease. {II}. What Confers the Selective Advantage Upon the Jewish Heterozygote?},
+	copyright = {©1972 Springer-Verlag {US}},
+	isbn = {978-1-4757-6572-4, 978-1-4757-6570-0},
+	url = {http://link.springer.com/chapter/10.1007/978-1-4757-6570-0_38},
+	abstract = {It is now well established that the birth incidence of Tay-Sachs disease ({TSD}) is a hundred times higher, and the gene frequency ten times higher among Ashkenazi Jews than among other Jewish groups and non-Jewish populations (Goldschmidt et al., 1956, Kozinn et al., 1957, Myrianthopoulos, 1962, Aronson, 1964). The present authors (Myrianthopoulos and Aronson, 1966) examined several possible mechanisms but found no evidence that differential breeding pattern, genetic drift or differential mutation rate could explain the difference in gene frequency distribution. We then tested the possibility of differential fertility of the heterozygote for the {TSD} gene by comparing the reproductive performance of the grandparents of a large number of Jewish infants affected with {TSD} with that of an appropriate control group. The results suggested that the Jewish {TSD} heterozygote enjoys an overall reproductive advantage of about 6\% over the presumed Jewish homozygous normal and that {TSD} sibships had significantly higher survival to age 21 than did control sibships. This advantage is of more than sufficient magnitude to have raised the frequency of the lethal {TSD} gene among the Ashkenazi Jews from a presumed frequency equal to that of non-Jews of 0.0013 at the end of the first century A.D. when the mass emigration of the Jews began, through 50 generations to the late 19th century, when {TSD} was recognized as occurring chiefly among Ashkenazi Jews with a gene frequency of 0.0126.},
+	language = {en},
+	number = {19},
+	urldate = {2014-10-16},
+	booktitle = {Sphingolipids, Sphingolipidoses and Allied Disorders},
+	publisher = {Springer {US}},
+	author = {Myrianthopoulos, Ntinos C. and Aronson, Stanley M.},
+	editor = {Volk, Bruno W. and Aronson, Stanley M.},
+	month = jan,
+	year = {1972},
+	keywords = {Cardiology},
+	pages = {561--570},
+	file = {Snapshot:/home/bolker/.mozilla/firefox/gf2kp1m5.default/zotero/storage/2HC4PJER/978-1-4757-6570-0_38.html:text/html}
+}
+
+@article{sabeti_detecting_2002,
+	title = {Detecting recent positive selection in the human genome from haplotype structure},
+	volume = {419},
+	copyright = {© 2002 Nature Publishing Group},
+	issn = {0028-0836},
+	url = {http://www.nature.com/nature/journal/v419/n6909/full/nature01140.html},
+	doi = {10.1038/nature01140},
+	abstract = {The ability to detect recent natural selection in the human population would have profound implications for the study of human history and for medicine. Here, we introduce a framework for detecting the genetic imprint of recent positive selection by analysing long-range haplotypes in human populations. We first identify haplotypes at a locus of interest (core haplotypes). We then assess the age of each core haplotype by the decay of its association to alleles at various distances from the locus, as measured by extended haplotype homozygosity ({EHH}). Core haplotypes that have unusually high {EHH} and a high population frequency indicate the presence of a mutation that rose to prominence in the human gene pool faster than expected under neutral evolution. We applied this approach to investigate selection at two genes carrying common variants implicated in resistance to malaria: G6PD and {CD}40 ligand. At both loci, the core haplotypes carrying the proposed protective mutation stand out and show significant evidence of selection. More generally, the method could be used to scan the entire genome for evidence of recent positive selection.},
+	language = {en},
+	number = {6909},
+	urldate = {2014-10-16},
+	journal = {Nature},
+	author = {Sabeti, Pardis C. and Reich, David E. and Higgins, John M. and Levine, Haninah Z. P. and Richter, Daniel J. and Schaffner, Stephen F. and Gabriel, Stacey B. and Platko, Jill V. and Patterson, Nick J. and McDonald, Gavin J. and Ackerman, Hans C. and Campbell, Sarah J. and Altshuler, David and Cooper, Richard and Kwiatkowski, Dominic and Ward, Ryk and Lander, Eric S.},
+	month = oct,
+	year = {2002},
+	pages = {832--837},
+	file = {Snapshot:/home/bolker/.mozilla/firefox/gf2kp1m5.default/zotero/storage/73IQWQTK/nature01140.html:text/html}
+}
+
+@article{liu_detecting_????,
+	title = {Detecting and Characterizing Genomic Signatures of Positive Selection in Global Populations},
+	volume = {92},
+	issn = {00029297},
+	url = {http://resolver.scholarsportal.info/resolve/00029297/v92i0006/866_dacgsopsigp.xml},
+	number = {6},
+	author = {Liu, Xuanyao},
+	pages = {866--881},
+	file = {Detecting and Characterizing Genomic Signatures of Positive Selection in Global Populations:/home/bolker/.mozilla/firefox/gf2kp1m5.default/zotero/storage/64QR8MBV/866_dacgsopsigp.html:text/html}
+}
+
+@article{quintana-murci_role_2010,
+	title = {The role played by natural selection on Mendelian traits in humans},
+	volume = {1214},
+	copyright = {© 2010 New York Academy of Sciences},
+	issn = {1749-6632},
+	url = {http://onlinelibrary.wiley.com/doi/10.1111/j.1749-6632.2010.05856.x/abstract},
+	doi = {10.1111/j.1749-6632.2010.05856.x},
+	abstract = {Detecting whether and how natural selection has targeted regions of the human genome represents a complementary strategy for identifying functionally important loci and variants involved in disease resistance and adaptation to the environment. In contrast with most complex diseases or traits, the genetic architecture of most Mendelian traits is relatively well established. Most mutations associated with Mendelian disease-related traits are highly penetrant and kept at low population frequencies because of the effects of purifying selection. However, this is not always the case. Here, we review several examples of Mendelian mutations—associated with various disease conditions or other traits of anthropological interest—that have increased in frequency in the human population as a result of past positive selection. These examples clearly illustrate the value of a population genetics approach to unravel the biological mechanisms that have been central to our past and present survival against the selective pressures imposed by diseases and other environmental factors.},
+	language = {en},
+	number = {1},
+	urldate = {2014-10-16},
+	journal = {Annals of the New York Academy of Sciences},
+	author = {Quintana-Murci, Lluis and Barreiro, Luis B.},
+	month = dec,
+	year = {2010},
+	keywords = {cystic fibrosis, lactase persistence, {MALARIA}, Mendelian traits, natural selection, noroviruses},
+	pages = {1--17}
+}
+
+
+@article{reed_genetic_2004,
+	title = {Genetic Analysis of Lice Supports Direct Contact between Modern and Archaic Humans},
+	volume = {2},
+	doi = {10.1371/journal.pbio.0020340},
+	abstract = {A phylogenetic analysis reveals that humans have two types of head lice and that one must have switched from an ancient to a modern human host, suggesting these humans had contact.},
+	number = {11},
+	urldate = {2014-10-01},
+	journal = {{PLoS} Biol},
+	author = {Reed, David L and Smith, Vincent S and Hammond, Shaless L and Rogers, Alan R and Clayton, Dale H},
+	month = oct,
+	year = {2004},
+	pages = {e340},
+	file = {PLoS Snapshot:/home/bolker/.mozilla/firefox/gf2kp1m5.default/zotero/storage/5SWMUFPR/journal.pbio.html:text/html;Reed et al_2004_Genetic Analysis of Lice Supports Direct Contact between Modern and Archaic.pdf:/home/bolker/.mozilla/firefox/gf2kp1m5.default/zotero/storage/XJE2G279/Reed et al_2004_Genetic Analysis of Lice Supports Direct Contact between Modern and Archaic.pdf:application/pdf}
+}
+
+@article{sandholt_beyond_2012,
+	title = {Beyond the fourth wave of genome-wide obesity association studies},
+	volume = {2},
+	copyright = {© 2012 Nature Publishing Group},
+	url = {http://www.nature.com/nutd/journal/v2/n7/full/nutd20129a.html},
+	doi = {10.1038/nutd.2012.9},
+	abstract = {Obesity and related complications are major health burdens. Almost 700 million adults are currently obese globally and the prevalence is predicted to rise towards 2030. The sudden change of lifestyle with physical inactivity and excessive calorie intake undoubtedly have a major part of the epidemic development; however, some individuals seem to be more prone to be affected by an unhealthy lifestyle than others. Hence, genetic predisposition also has an essential role in determining disease susceptibility and response to lifestyle factors. Since the introduction of genome-wide association studies ({GWAS}), the success of identifying obesity susceptibility variants have increased, and a total of 32 variants have been identified associating genome-wide significantly with body mass index ({BMI}) and 18 with measures of fat distribution during four overall obesity {GWAS} waves. However, the immediate success of the {GWAS} approach has eased off, but the proportion of explained variance for {BMI} by the identified obesity variants remains low. This review suggests and discusses new initiatives to take {GWAS} of obesity to the next level, including gene–environment interactions as modulating/masking factors, low-frequent or rare variants and ways to address such analyses, and finally reflections about the applicability of epigenetic modifications when elucidating the genetic background of obesity.},
+	language = {en},
+	number = {7},
+	urldate = {2014-10-19},
+	journal = {Nutrition \& Diabetes},
+	author = {Sandholt, C. H. and Hansen, T. and Pedersen, O.},
+	month = jul,
+	year = {2012},
+	keywords = {epigenetic modifications, future perspectives, gene–environment interaction, genome-wide association studies, low-frequent and rare variants, obesity},
+	pages = {e37},
+	file = {Sandholt et al_2012_Beyond the fourth wave of genome-wide obesity association studies.pdf:/home/bolker/.mozilla/firefox/gf2kp1m5.default/zotero/storage/TW2UXBHG/Sandholt et al_2012_Beyond the fourth wave of genome-wide obesity association studies.pdf:application/pdf;Snapshot:/home/bolker/.mozilla/firefox/gf2kp1m5.default/zotero/storage/NRW89P3J/nutd20129a.html:text/html}
+}
+
+
+@article{george_improved_2011,
+	title = {Improved survival at low lung function in cystic fibrosis: cohort study from 1990 to 2007},
+	volume = {342},
+	issn = {0959-8138, 1468-5833},
+	shorttitle = {Improved survival at low lung function in cystic fibrosis},
+	url = {http://www.bmj.com/content/342/bmj.d1008},
+	doi = {10.1136/bmj.d1008},
+	language = {en},
+	number = {feb28 1},
+	urldate = {2014-10-19},
+	journal = {{BMJ}},
+	author = {George, P. M. and Banya, W. and Pareek, N. and Bilton, D. and Cullinan, P. and Hodson, M. E. and Simmonds, N. J.},
+	month = feb,
+	year = {2011},
+	pages = {d1008--d1008},
+	file = {Improved survival at low lung function in cystic fibrosis\: cohort study from 1990 to 2007 | The BMJ:/home/bolker/.mozilla/firefox/gf2kp1m5.default/zotero/storage/E4WGBAUE/bmj.html:text/html}
+}
+
